--- a/index.html
+++ b/index.html
@@ -102,12 +102,8 @@ table.wikitablewide td {
                 </tr>
                 <tr style="text-align: center;">
                     <td>
-                        <img src="https://media.alg-wiki.com/Event/world_13.png">
-                        <img src="https://media.alg-wiki.com/Event/cygnet_maid_skin.png">
                     </td>
                     <td>
-                        <img src="https://media.alg-wiki.com/Event/moonlit_overture.png">
-                        <img src="https://media.alg-wiki.com/Event/kirishima_ninjutsu_class.png">
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
@@ -122,17 +118,24 @@ table.wikitablewide td {
                 </tr>
                 <tr>
                     <td>
-                        <commented-ship-display ship="dewey" comment="Drop in 13-3" new="true"></commented-ship-display>
-                        <commented-ship-display ship="bunker_hill" comment="Drop in 13-4" new="true"></commented-ship-display>
+                        <commented-ship-display ship="belchan" comment="Light Construction Permanent"></commented-ship-display>
+                        <commented-ship-display ship="hieichan" comment="Special Construction" new="true" skin-limited="true" ></commented-ship-display>
+                        <commented-ship-display ship="akagichan" comment="Special Construction" new="true" skin-limited="true" ></commented-ship-display>
+                        <commented-ship-display ship="zeppelinchan" comment="Special Construction" new="true" skin-limited="true" ></commented-ship-display>
+                        <commented-ship-display ship="kizuna_ai" comment="KizunaAI Collab Event Mission Reward" new="true" skin-limited="true" ></commented-ship-display>
+                        <commented-ship-display ship="kizuna_ai_ca" comment="Limited Construction" new="true" skin-limited="true" ></commented-ship-display>
+                        <commented-ship-display ship="kizuna_ai_cv" comment="Limited Construction" new="true" skin-limited="true" ></commented-ship-display>
+                        <commented-ship-display ship="kizuna_ai_bb" comment="Limited Construction" new="true" skin-limited="true" ></commented-ship-display>
                     </td>
                     <td>
-                        <commented-ship-display ship="agano" comment="Drop 11-2"></commented-ship-display>
-                        <commented-ship-display ship="sendai" comment="Drop 11-3"></commented-ship-display>
-                        <commented-ship-display ship="columbia" comment="Drop 11-4"></commented-ship-display>
-                        <commented-ship-display ship="astoria" comment="3-star SP3"></commented-ship-display>
-                        <commented-ship-display ship="quincy" comment="Login Daily 3 days"></commented-ship-display>
-                        <commented-ship-display ship="vincennes" comment="Complete Event Mission"></commented-ship-display>
-                        <commented-ship-display ship="kirishima" comment="Login once on event duration"></commented-ship-display>
+                        <commented-ship-display ship="belchan" comment="Event Mission Operation Manjuu" new="true"></commented-ship-display>
+                        <commented-ship-display ship="hieichan" comment="Special Construction" new="true" skin-limited="true" ></commented-ship-display>
+                        <commented-ship-display ship="akagichan" comment="Special Construction" new="true" skin-limited="true" ></commented-ship-display>
+                        <commented-ship-display ship="zeppelinchan" comment="Special Construction" new="true" skin-limited="true" ></commented-ship-display>
+                        <commented-ship-display ship="kizuna_ai" comment="KizunaAI Collab Event Mission Reward" new="true" skin-limited="true" ></commented-ship-display>
+                        <commented-ship-display ship="kizuna_ai_ca" comment="Limited Construction" new="true" skin-limited="true" ></commented-ship-display>
+                        <commented-ship-display ship="kizuna_ai_cv" comment="Limited Construction" new="true" skin-limited="true" ></commented-ship-display>
+                        <commented-ship-display ship="kizuna_ai_bb" comment="Limited Construction" new="true" skin-limited="true" ></commented-ship-display>
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
@@ -146,11 +149,10 @@ table.wikitablewide td {
                     </td>
                 </tr>
                 <tr>
-                    <td></td>
                     <td>
-                        <commented-ship-display ship="sendai" retrofit="true"></commented-ship-display>
-                        <commented-ship-display ship="kamikaze" retrofit="true"></commented-ship-display>
-                        <commented-ship-display ship="mutsuki" retrofit="true"></commented-ship-display>
+                        <commented-ship-display ship="kisaragi" retrofit="true"></commented-ship-display>                       
+                    </td>
+                    <td>
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
@@ -165,15 +167,21 @@ table.wikitablewide td {
                 </tr>
                 <tr>
                     <td>
-                        <commented-ship-display ship="cygnet" skin="6" skin-bg="true" skin-limited="true" new="true"></commented-ship-display>
-                        <commented-ship-display ship="yuugure" skin="2" skin-bg="true" discount="20% OFF"></commented-ship-display>
-                        <commented-ship-display ship="shiratsuyu" skin="2" skin-bg="true" discount="20% OFF"></commented-ship-display>
+                        <commented-ship-display ship="kizuna_ai" skin="2" skin-limited="true" new="true"></commented-ship-display>
+                        <commented-ship-display ship="saratoga" skin="4" skin-limited="true" new="true"></commented-ship-display>
+                        <commented-ship-display ship="laffey" skin="5" skin-limited="true" new="true"></commented-ship-display>
+                        <commented-ship-display ship="javelin" skin="4" skin-limited="true" new="true"></commented-ship-display>
+                        <commented-ship-display ship="ayanami" skin="6" skin-limited="true" new="true"></commented-ship-display>
+                        <commented-ship-display ship="z23" skin="3" skin-limited="true" new="true"></commented-ship-display>
+                        <commented-ship-display ship="an_shan" skin="2" skin-limited="true" new="true"></commented-ship-display>
                     </td>
                     <td>
-                        <commented-ship-display ship="astoria" skin="2" skin-bg="true" skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="quincy" skin="2" skin-bg="true" skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="vincennes" skin="2" skin-limited="true"></commented-ship-display>
-                        <commented-ship-display ship="kirishima" skin="2" skin-bg="true" skin-limited="true"></commented-ship-display>
+                        <commented-ship-display ship="kizuna_ai" skin="2" skin-limited="true" new="true"></commented-ship-display>
+                        <commented-ship-display ship="saratoga" skin="4" skin-limited="true" new="true"></commented-ship-display>
+                        <commented-ship-display ship="laffey" skin="5" skin-limited="true" new="true"></commented-ship-display>
+                        <commented-ship-display ship="javelin" skin="4" skin-limited="true" new="true"></commented-ship-display>
+                        <commented-ship-display ship="ayanami" skin="6" skin-limited="true" new="true"></commented-ship-display>
+                        <commented-ship-display ship="z23" skin="3" skin-limited="true" new="true"></commented-ship-display>
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
@@ -202,10 +210,8 @@ table.wikitablewide td {
                 </tr>
                 <tr>
                     <td>
-                        <img src="https://media.alg-wiki.com/Event/ski_resort.png">
                     </td>
                     <td>
-                        <img src="https://media.alg-wiki.com/Event/cat_cafe_dorm.png">
                     </td>
                 </tr>
             </table>
