--- a/ship.html
+++ b/ship.html
@@ -731,6 +731,50 @@
 
 <div class="wideCol">
 
+<!-- Fleet Tech -->
+<table class="wikitablewide" style="width:100%;text-align:center;display: none" id="shipFleetTech">
+	<tr style="text-align:center">
+		<td colspan="2"  style="background:#000000;height:30px" id="shipRarityColor11">
+			<b>
+				<font style="vertical-align: inherit;">Fleet Tech</font>
+			</b>
+		</td>
+	</tr>
+	<tr>
+		<td style="background:#24252d;height:30px;width: 40%" id="shipFleetTechTierClass"></td>
+		<td style="background:#24252d;height:30px;width: 60%"><b>Tech Points and Bonus</b></td>
+	</tr>
+	<tr>
+		<td id="shipFleetTechClassShips" style="padding-bottom: 10px">
+			
+		</td>
+		<td style="text-align:left;height:1px;">
+			<table class="wikitablewide" style="width:100%;height:100%;text-align:left;margin:0 0 0 0;">
+					<tr>
+						<td rowspan="3" style="width: 30%;text-align: center;" id="shipFleetTechSD"></td>
+						<td>Unlock</td>
+						<td id="shipFleetTechUnlockPoint"></td>
+						<td id="shipFleetTechUnlockStats"></td>
+					</tr>
+					<tr>
+						<td>Max LimitBreak</td>
+						<td id="shipFleetTechMLBPoint"></td>
+						<td id="shipFleetTechMLBStats"></td>
+					</tr>
+					<tr>
+						<td>Lv.120</td>
+						<td id="shipFleetTech120Point"></td>
+						<td id="shipFleetTech120Stats"></td>
+					</tr>
+			</table>
+		</td>
+	</tr>
+</table>
+	
+</div>
+
+<div class="wideCol">
+
 <!-- Skills -->
 <table class="wikitablewide" style="width:100%;text-align:center" id="shipSkillSet">
 	<!-- JS generated table -->
