fixed fleet tech views, edited lines column headers

--- a/ship.html
+++ b/ship.html
@@ -733,6 +733,7 @@
 
 <!-- Fleet Tech -->
 <table class="wikitablewide" style="width:100%;text-align:center;display: none" id="shipFleetTech">
+	<tbody style="width: 100%">
 	<tr style="text-align:center">
 		<td colspan="2"  style="background:#000000;height:30px" id="shipRarityColor11">
 			<b>
@@ -769,6 +770,7 @@
 			</table>
 		</td>
 	</tr>
+	</tbody>
 </table>
 	
 </div>
@@ -947,13 +949,13 @@
 					</td>
 					<td style="width:3%"></td>
 					<td style="width:27%">
-						<b>Chinese</b>
+						<b>Chinese Server</b>
 					</td>
 					<td style="width:27%">
-						<b>Japanese</b>
+						<b>Japanese Server</b>
 					</td>
 					<td style="width:27%">
-						<b>English</b>
+						<b>English Server</b>
 					</td>
 				</tr>
 				<tr style="text-align:left">
