updated front page

--- a/index.html
+++ b/index.html
@@ -118,24 +118,22 @@ table.wikitablewide td {
                 </tr>
                 <tr>
                     <td>
-                        <commented-ship-display ship="belchan" comment="Light Construction Permanent"></commented-ship-display>
-                        <commented-ship-display ship="hieichan" comment="Special Construction" new="true" skin-limited="true" ></commented-ship-display>
-                        <commented-ship-display ship="akagichan" comment="Special Construction" new="true" skin-limited="true" ></commented-ship-display>
-                        <commented-ship-display ship="zeppelinchan" comment="Special Construction" new="true" skin-limited="true" ></commented-ship-display>
-                        <commented-ship-display ship="kizuna_ai" comment="KizunaAI Collab Event Mission Reward" new="true" skin-limited="true" ></commented-ship-display>
-                        <commented-ship-display ship="kizuna_ai_ca" comment="Limited Construction" new="true" skin-limited="true" ></commented-ship-display>
-                        <commented-ship-display ship="kizuna_ai_cv" comment="Limited Construction" new="true" skin-limited="true" ></commented-ship-display>
-                        <commented-ship-display ship="kizuna_ai_bb" comment="Limited Construction" new="true" skin-limited="true" ></commented-ship-display>
+                        <commented-ship-display ship="duke_of_york" comment="Combat History: Winter's Crown - Drop / Heavy Construction - Permanent"></commented-ship-display>
+                        <commented-ship-display ship="musketeer" comment="Combat History: Winter's Crown - Drop"></commented-ship-display>
+                        <commented-ship-display ship="fiji" comment="Combat History: Winter's Crown - Drop"></commented-ship-display>
+                        <commented-ship-display ship="jamaica" comment="Combat History: Winter's Crown - Drop / Light Construction - Permanent"></commented-ship-display>
+                        <commented-ship-display ship="swiftsure" comment="Light Construction - Permanent" new="true"></commented-ship-display>
+                        <commented-ship-display ship="chaser" comment="Light/Special Construction - Permanent"></commented-ship-display>
+                        <commented-ship-display ship="matchless" comment="Light Construction - Permanent"></commented-ship-display>
+                        <commented-ship-display ship="sheffield" comment="Light Construction - Permanent"></commented-ship-display>
+                        <commented-ship-display ship="curacoa" comment="Light Construction - Permanent"></commented-ship-display>
+                        <commented-ship-display ship="curlew" comment="Light Construction - Permanent"></commented-ship-display>
+                        <commented-ship-display ship="victorious" comment="Special Construction - Permanent"></commented-ship-display>
                     </td>
                     <td>
-                        <commented-ship-display ship="belchan" comment="Event Mission Operation Manjuu" new="true"></commented-ship-display>
-                        <commented-ship-display ship="hieichan" comment="Special Construction" new="true" skin-limited="true" ></commented-ship-display>
-                        <commented-ship-display ship="akagichan" comment="Special Construction" new="true" skin-limited="true" ></commented-ship-display>
-                        <commented-ship-display ship="zeppelinchan" comment="Special Construction" new="true" skin-limited="true" ></commented-ship-display>
-                        <commented-ship-display ship="kizuna_ai" comment="KizunaAI Collab Event Mission Reward" new="true" skin-limited="true" ></commented-ship-display>
-                        <commented-ship-display ship="kizuna_ai_ca" comment="Limited Construction" new="true" skin-limited="true" ></commented-ship-display>
-                        <commented-ship-display ship="kizuna_ai_cv" comment="Limited Construction" new="true" skin-limited="true" ></commented-ship-display>
-                        <commented-ship-display ship="kizuna_ai_bb" comment="Limited Construction" new="true" skin-limited="true" ></commented-ship-display>
+                        <commented-ship-display ship="acasta" comment="Event: Glorious Battle - Mission" new="true" skin-limited="true" ></commented-ship-display>
+                        <commented-ship-display ship="ardent" comment="Event: Glorious Battle - 20 SP3 Clear / SP2 Drop" new="true" skin-limited="true" ></commented-ship-display>
+                        <commented-ship-display ship="glorious" comment="Event: Glorious Battle - 60 SP3 Clear / SP3 Drop" new="true" skin-limited="true" ></commented-ship-display>
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
@@ -150,9 +148,12 @@ table.wikitablewide td {
                 </tr>
                 <tr>
                     <td>
-                        <commented-ship-display ship="kisaragi" retrofit="true"></commented-ship-display>                       
+                        <commented-ship-display ship="curacoa" retrofit="true"></commented-ship-display> 
+                        <commented-ship-display ship="curlew" retrofit="true"></commented-ship-display>                     
                     </td>
                     <td>
+                        <commented-ship-display ship="acasta" retrofit="true"></commented-ship-display> 
+                        <commented-ship-display ship="ardent" retrofit="true"></commented-ship-display> 
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
@@ -167,21 +168,19 @@ table.wikitablewide td {
                 </tr>
                 <tr>
                     <td>
-                        <commented-ship-display ship="kizuna_ai" skin="2" skin-limited="true" new="true"></commented-ship-display>
-                        <commented-ship-display ship="saratoga" skin="4" skin-limited="true" new="true"></commented-ship-display>
-                        <commented-ship-display ship="laffey" skin="5" skin-limited="true" new="true"></commented-ship-display>
-                        <commented-ship-display ship="javelin" skin="4" skin-limited="true" new="true"></commented-ship-display>
-                        <commented-ship-display ship="ayanami" skin="6" skin-limited="true" new="true"></commented-ship-display>
-                        <commented-ship-display ship="z23" skin="3" skin-limited="true" new="true"></commented-ship-display>
-                        <commented-ship-display ship="an_shan" skin="2" skin-limited="true" new="true"></commented-ship-display>
+                        <commented-ship-display ship="sirius" skin="3" new="true" skin-l2d="true" skin-bg="true"></commented-ship-display>
+                        <commented-ship-display ship="swiftsure" skin="2" new="true" skin-bg="true"></commented-ship-display>
+                        <commented-ship-display ship="matchless" skin="2" new="true" skin-bg="true"></commented-ship-display>
+                        <commented-ship-display ship="fiji" skin="2" new="true"></commented-ship-display>
+                        <commented-ship-display ship="sirius" skin="2" skin-bg="true"></commented-ship-display>
+                        <commented-ship-display ship="victorious" skin="2" skin-bg="true"></commented-ship-display>
+                        <commented-ship-display ship="sheffield" skin="2"></commented-ship-display>
+                        <commented-ship-display ship="duke_of_york" skin="2" skin-bg="true"></commented-ship-display>
+                        <commented-ship-display ship="jamaica" skin="2" skin-bg="true"></commented-ship-display>
                     </td>
                     <td>
-                        <commented-ship-display ship="kizuna_ai" skin="2" skin-limited="true" new="true"></commented-ship-display>
-                        <commented-ship-display ship="saratoga" skin="4" skin-limited="true" new="true"></commented-ship-display>
-                        <commented-ship-display ship="laffey" skin="5" skin-limited="true" new="true"></commented-ship-display>
-                        <commented-ship-display ship="javelin" skin="4" skin-limited="true" new="true"></commented-ship-display>
-                        <commented-ship-display ship="ayanami" skin="6" skin-limited="true" new="true"></commented-ship-display>
-                        <commented-ship-display ship="z23" skin="3" skin-limited="true" new="true"></commented-ship-display>
+                        <commented-ship-display ship="acasta" skin="2" skin-limited="true" new="true"></commented-ship-display>
+                        <commented-ship-display ship="glorious" skin="2" skin-limited="true" new="true"></commented-ship-display>
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
