edited main page

--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@ table.wikitablewide td {
                     <td>
                         <commented-ship-display ship="sirius" skin="3" new="true" skin-l2d="true" skin-bg="true"></commented-ship-display>
                         <commented-ship-display ship="swiftsure" skin="2" new="true" skin-bg="true"></commented-ship-display>
+                        <commented-ship-display ship="chaser" skin="3" new="true" skin-bg="true"></commented-ship-display>
                         <commented-ship-display ship="matchless" skin="2" new="true" skin-bg="true"></commented-ship-display>
                         <commented-ship-display ship="fiji" skin="2" new="true"></commented-ship-display>
                         <commented-ship-display ship="sirius" skin="2" skin-bg="true"></commented-ship-display>
