added main page banners

--- a/index.html
+++ b/index.html
@@ -102,8 +102,12 @@ table.wikitablewide td {
                 </tr>
                 <tr style="text-align: center;">
                     <td>
+                        <img src="https://media.alg-wiki.com/assets/event_banner/memory_wc.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/summer_sirius.png" style="width: 100%">
                     </td>
                     <td>
+                        <img src="https://media.alg-wiki.com/assets/event_banner/glorius_battle_en.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/strategic_supplies_en.png" style="width: 100%">
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
@@ -209,7 +213,8 @@ table.wikitablewide td {
                     </td>
                 </tr>
                 <tr>
-                    <td>
+                    <td>                        
+                        <img src="https://media.alg-wiki.com/assets/event_banner/rain_furniture.png" style="width: 100%">
                     </td>
                     <td>
                     </td>
