edited home page

--- a/index.html
+++ b/index.html
@@ -102,12 +102,18 @@ table.wikitablewide td {
                 </tr>
                 <tr style="text-align: center;">
                     <td>
-                        <img src="https://media.alg-wiki.com/assets/event_banner/memory_wc.png" style="width: 100%">
-                        <img src="https://media.alg-wiki.com/assets/event_banner/summer_sirius.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/iris_jp_rerun.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/iris_jp_rerun_skin.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/slow_advance_jp.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/iris_jp_rerun_rate_up.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/jp_06_27.png" style="width: 100%">
                     </td>
                     <td>
-                        <img src="https://media.alg-wiki.com/assets/event_banner/glorius_battle_en.png" style="width: 100%">
-                        <img src="https://media.alg-wiki.com/assets/event_banner/strategic_supplies_en.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/iris_en.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/iris_en_skin.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/slow_advance_en.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/iris_en_rate_up.png" style="width: 100%">
+                        <img src="https://media.alg-wiki.com/assets/event_banner/en_06_27.png" style="width: 100%">
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
@@ -122,22 +128,26 @@ table.wikitablewide td {
                 </tr>
                 <tr>
                     <td>
-                        <commented-ship-display ship="duke_of_york" comment="Combat History: Winter's Crown - Drop / Heavy Construction - Permanent"></commented-ship-display>
-                        <commented-ship-display ship="musketeer" comment="Combat History: Winter's Crown - Drop"></commented-ship-display>
-                        <commented-ship-display ship="fiji" comment="Combat History: Winter's Crown - Drop"></commented-ship-display>
-                        <commented-ship-display ship="jamaica" comment="Combat History: Winter's Crown - Drop / Light Construction - Permanent"></commented-ship-display>
-                        <commented-ship-display ship="swiftsure" comment="Light Construction - Permanent" new="true"></commented-ship-display>
-                        <commented-ship-display ship="chaser" comment="Light/Special Construction - Permanent"></commented-ship-display>
-                        <commented-ship-display ship="matchless" comment="Light Construction - Permanent"></commented-ship-display>
-                        <commented-ship-display ship="sheffield" comment="Light Construction - Permanent"></commented-ship-display>
-                        <commented-ship-display ship="curacoa" comment="Light Construction - Permanent"></commented-ship-display>
-                        <commented-ship-display ship="curlew" comment="Light Construction - Permanent"></commented-ship-display>
-                        <commented-ship-display ship="victorious" comment="Special Construction - Permanent"></commented-ship-display>
+                        <commented-ship-display ship="le_malin" new="true" comment="Limited Build - 00:33:00 - 2%"></commented-ship-display>
+                        <commented-ship-display ship="l_opiniatre" new="true" comment="Limited Build - 00:26:00 - 2.5%"></commented-ship-display>
+                        <commented-ship-display ship="jean_bart" comment="Limited Build - 05:50:00 - 1.8%"></commented-ship-display>
+                        <commented-ship-display ship="massachusetts" comment="Limited Build - 05:00:00 - 1.8%"></commented-ship-display>
+                        <commented-ship-display ship="dunkerque" comment="Limited Build - 04:05:00 - 2.5%"></commented-ship-display>
+                        <commented-ship-display ship="surcouf" comment="Limited Build - 00:35:00 - 2.5%"></commented-ship-display>
+                        <commented-ship-display ship="forbin" comment="Limited Build - 00:23:00 - 5%"></commented-ship-display>
+                        <commented-ship-display ship="le_triomphant" comment="Event Shop - 8000 / Drop - B3, D3 (Boss Only)"></commented-ship-display>
+                        <commented-ship-display ship="emile_bertin" comment="Radiant Iris - 10k, 15k, 40k, 60k"></commented-ship-display>
+                        <commented-ship-display ship="le_mars" comment="Event Shop - 2000 / Drop - A3, B2, C3, D2, D3"></commented-ship-display>
                     </td>
                     <td>
-                        <commented-ship-display ship="acasta" comment="Event: Glorious Battle - Mission" new="true" skin-limited="true" ></commented-ship-display>
-                        <commented-ship-display ship="ardent" comment="Event: Glorious Battle - 20 SP3 Clear / SP2 Drop" new="true" skin-limited="true" ></commented-ship-display>
-                        <commented-ship-display ship="glorious" comment="Event: Glorious Battle - 60 SP3 Clear / SP3 Drop" new="true" skin-limited="true" ></commented-ship-display>
+                        <commented-ship-display ship="jean_bart" new="true" comment="Limited Build - 05:50:00 - 2%"></commented-ship-display>
+                        <commented-ship-display ship="massachusetts" new="true" comment="Limited Build - 05:00:00 - 2%"></commented-ship-display>
+                        <commented-ship-display ship="dunkerque" new="true" comment="Limited Build - 04:05:00 - 2.5%"></commented-ship-display>
+                        <commented-ship-display ship="surcouf" new="true" comment="Limited Build - 00:35:00 - 2.5%"></commented-ship-display>
+                        <commented-ship-display ship="forbin" new="true" comment="Limited Build - 00:23:00 - 5%"></commented-ship-display>
+                        <commented-ship-display ship="le_triomphant" new="true" comment="Event Shop - 8000 / Drop - B3, D3 (Boss Only)"></commented-ship-display>
+                        <commented-ship-display ship="emile_bertin" new="true" comment="Radiant Iris - 10k, 15k, 40k, 60k"></commented-ship-display>
+                        <commented-ship-display ship="le_mars" new="true" comment="Event Shop - 2000 / Drop - A3, B2, C3, D2, D3"></commented-ship-display>
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
@@ -152,12 +162,12 @@ table.wikitablewide td {
                 </tr>
                 <tr>
                     <td>
-                        <commented-ship-display ship="curacoa" retrofit="true"></commented-ship-display> 
-                        <commented-ship-display ship="curlew" retrofit="true"></commented-ship-display>                     
+                        <commented-ship-display ship="emile_bertin" retrofit="true"></commented-ship-display>              
                     </td>
                     <td>
-                        <commented-ship-display ship="acasta" retrofit="true"></commented-ship-display> 
-                        <commented-ship-display ship="ardent" retrofit="true"></commented-ship-display> 
+                        <commented-ship-display ship="forbin" retrofit="true"></commented-ship-display> 
+                        <commented-ship-display ship="le_mars" retrofit="true"></commented-ship-display> 
+                        <commented-ship-display ship="emile_bertin" retrofit="true"></commented-ship-display>  
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
@@ -172,20 +182,23 @@ table.wikitablewide td {
                 </tr>
                 <tr>
                     <td>
-                        <commented-ship-display ship="sirius" skin="3" new="true" skin-l2d="true" skin-bg="true"></commented-ship-display>
-                        <commented-ship-display ship="swiftsure" skin="2" new="true" skin-bg="true"></commented-ship-display>
-                        <commented-ship-display ship="chaser" skin="3" new="true" skin-bg="true"></commented-ship-display>
-                        <commented-ship-display ship="matchless" skin="2" new="true" skin-bg="true"></commented-ship-display>
-                        <commented-ship-display ship="fiji" skin="2" new="true"></commented-ship-display>
-                        <commented-ship-display ship="sirius" skin="2" skin-bg="true"></commented-ship-display>
-                        <commented-ship-display ship="victorious" skin="2" skin-bg="true"></commented-ship-display>
-                        <commented-ship-display ship="sheffield" skin="2"></commented-ship-display>
-                        <commented-ship-display ship="duke_of_york" skin="2" skin-bg="true"></commented-ship-display>
-                        <commented-ship-display ship="jamaica" skin="2" skin-bg="true"></commented-ship-display>
+                        <commented-ship-display ship="le_malin" skin="2" new="true" skin-limited="true"></commented-ship-display>
+                        <commented-ship-display ship="dunkerque" skin="3" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
+                        <commented-ship-display ship="le_mars" skin="3" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
+                        <commented-ship-display ship="forbin" skin="3" new="true" skin-bg="true" skin-limited="true" ></commented-ship-display>
+                        <commented-ship-display ship="l_opiniatre" skin="2" new="true" skin-bg="true" skin-limited="true" "></commented-ship-display>
+                        <commented-ship-display ship="dunkerque" skin="2" skin-bg="true" skin-l2d="true" skin-limited="true" ></commented-ship-display>
+                        <commented-ship-display ship="emile_bertin" skin="2" skin-bg="true" skin-l2d="true" skin-limited="true" ></commented-ship-display>
+                        <commented-ship-display ship="forbin" skin="2"  skin-limited="true"></commented-ship-display>
+                        <commented-ship-display ship="le_mars" skin="2" skin-bg="true" skin-limited="true"></commented-ship-display>
+                        <commented-ship-display ship="javelin" skin="5" new="true" skin-limited="true"></commented-ship-display>
                     </td>
                     <td>
-                        <commented-ship-display ship="acasta" skin="2" skin-limited="true" new="true"></commented-ship-display>
-                        <commented-ship-display ship="glorious" skin="2" skin-limited="true" new="true"></commented-ship-display>
+                        <commented-ship-display ship="dunkerque" skin="2" skin-bg="true" skin-l2d="true" skin-limited="true"  new="true"></commented-ship-display>
+                        <commented-ship-display ship="emile_bertin" skin="2" skin-bg="true" skin-l2d="true" skin-limited="true"  new="true"></commented-ship-display>
+                        <commented-ship-display ship="forbin" skin="2"  skin-limited="true" new="true"></commented-ship-display>
+                        <commented-ship-display ship="le_mars" skin="2" skin-bg="true" skin-limited="true" new="true"></commented-ship-display>
+                        <commented-ship-display ship="javelin" skin="5" new="true" skin-limited="true"></commented-ship-display>
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
