--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@ table.wikitablewide td {
                         <commented-ship-display ship="forbin" retrofit="true"></commented-ship-display> 
                         <commented-ship-display ship="le_mars" retrofit="true"></commented-ship-display> 
                         <commented-ship-display ship="emile_bertin" retrofit="true"></commented-ship-display>  
+                        <commented-ship-display ship="nicholas" retrofit="true"></commented-ship-display>  
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
@@ -194,11 +195,17 @@ table.wikitablewide td {
                         <commented-ship-display ship="javelin" skin="5" new="true" skin-limited="true"></commented-ship-display>
                     </td>
                     <td>
+                        <commented-ship-display ship="dunkerque" skin="3" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
+                        <commented-ship-display ship="le_mars" skin="3" new="true" skin-bg="true" skin-limited="true"></commented-ship-display>
+                        <commented-ship-display ship="forbin" skin="3" new="true" skin-bg="true" skin-limited="true" ></commented-ship-display>
                         <commented-ship-display ship="dunkerque" skin="2" skin-bg="true" skin-l2d="true" skin-limited="true"  new="true"></commented-ship-display>
                         <commented-ship-display ship="emile_bertin" skin="2" skin-bg="true" skin-l2d="true" skin-limited="true"  new="true"></commented-ship-display>
                         <commented-ship-display ship="forbin" skin="2"  skin-limited="true" new="true"></commented-ship-display>
                         <commented-ship-display ship="le_mars" skin="2" skin-bg="true" skin-limited="true" new="true"></commented-ship-display>
                         <commented-ship-display ship="javelin" skin="5" new="true" skin-limited="true"></commented-ship-display>
+                        <commented-ship-display ship="ibuki" skin="2" new="true" skin-limited="true" skin-l2d="true" skin-bg="true"></commented-ship-display>
+                        <commented-ship-display ship="izumo" skin="2" new="true" skin-limited="true" skin-bg="true"></commented-ship-display>
+                        <commented-ship-display ship="monarch" skin="3" new="true" skin-limited="true" skin-bg="true"></commented-ship-display>
                     </td>
                 </tr>
                 <tr style="text-align:center;background-color:#24252d; font-size: 20px; text-decoration: bold; height: 45px">                
